# ChatTraUtenti

./: CMakeLists.txt  Chat.h  ChatException.cpp  ChatException.h  GroupChat.cpp  GroupChat.h  Message.cpp  Message.h  ModifiedMessage.cpp  ModifiedMessage.h  MultimediaMessage.cpp  MultimediaMessage.h  Notification.cpp  Notification.h  Observer.h  PrivateChat.cpp  PrivateChat.h  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  GroupChatTest.cpp  MessageTest.cpp  NotificationTest.cpp  PrivateChatTest.cpp  UserTest.cpp  runAllTests.cpp
